--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-        repository: ${{ secrets.DOCKER_USERNAME }}/115strm
+        repository: ${{ secrets.DOCKER_USERNAME }}/mpcopy
         readme-filepath: ./README.md
